--- a/.github/workflows/my_workflow.yml
+++ b/.github/workflows/my_workflow.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
-          key: ${{ secrets.SSH_SECRET_KEY }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           known_hosts: unnecessary
 
       - name: Adding Known Hosts
