--- a/.github/workflows/my_workflow.yml
+++ b/.github/workflows/my_workflow.yml
@@ -11,8 +11,7 @@ jobs:
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          name: id_bastis
           known_hosts: ${{ secrets.KNOWN_HOSTS }} 
    
       - name: Rsync deployment
-        run: rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}" . ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/bastuhol/kaka
+        run: rsync -avz -e "ssh -p ${{ secrets.SSH_PORT }}"  ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }}:/home/bastuhol/kaka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
